Synced steps with graph